results/SVCOMP/4-shot/log-ExSymExe17-2024_03_18_18_36_37.txt
class Main {
  static int field;

  //@ ensures \result ==> test(x, field);
  public static boolean f() {
    int x = 3;
    Main inst = new Main();
    field = 9;
    return inst.test(x, field);
  }

  //@ requires true;
  //@ ensures \result ==> (z == 0 <==> (\result == false) && (z != 0 <==> \result == true));
  //@ ensures \result ==> (y == 0 ==> (\result == false) && (y != 0 ==> \result == true));
  public boolean test(int x, int z) {
    System.out.println("Testing ExSymExe17");
    int y = 0;
    z = x - y - 4;
    if (z == 0) {
      System.out.println("branch FOO1");
      return false;
    } else System.out.println("branch FOO2");
    if (y == 0) System.out.println("branch BOO1");
    else
      System.out.println("branch BOO2");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe17.java:4: error: cannot find symbol
  //@ ensures \result ==> test(x, field);
                               ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe17.java:4: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result ==> test(x, field);
                                  ^
/home/max/Documents/JMLGPT/tmp/ExSymExe17.java:14: error: cannot find symbol
  //@ ensures \result ==> (y == 0 ==> (\result == false) && (y != 0 ==> \result == true));
                           ^
  symbol:   variable y
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe17.java:14: error: cannot find symbol
  //@ ensures \result ==> (y == 0 ==> (\result == false) && (y != 0 ==> \result == true));
                                                             ^
  symbol:   variable y
  location: class Main
4 errors

